@startuml Star Schema - Walmart Data Warehouse

!define TABLE_COLOR #E1F5FF
!define FACT_COLOR #FFE1F5
!define PK_COLOR #90EE90
!define FK_COLOR #FFB6C1

skinparam class {
    BackgroundColor TABLE_COLOR
    BorderColor #000000
    ArrowColor #000000
}

skinparam linetype ortho

' Dimension Tables
entity "DimCustomer" as DimCustomer {
    * **Customer_ID** : INT <<PK>> #PK_COLOR
    --
    Gender : VARCHAR(1)
    Age : VARCHAR(10)
    Occupation : INT
    City_Category : VARCHAR(1)
    Stay_In_Current_City_Years : VARCHAR(10)
    Marital_Status : INT
}

entity "DimProduct" as DimProduct {
    * **Product_ID** : VARCHAR(20) <<PK>> #PK_COLOR
    --
    Product_Category : VARCHAR(50)
    Product_Name : VARCHAR(100)
    Supplier_ID : INT <<FK>> #FK_COLOR
    Supplier_Name : VARCHAR(100)
}

entity "DimDate" as DimDate {
    * **Date_ID** : INT <<PK>> #PK_COLOR
    --
    Full_Date : DATE
    Day : INT
    Month : INT
    Month_Name : VARCHAR(20)
    Quarter : INT
    Year : INT
    Day_Of_Week : VARCHAR(10)
    Is_Weekend : BOOLEAN
    Season : VARCHAR(10)
    Week_Of_Year : INT
}

entity "DimStore" as DimStore {
    * **Store_ID** : INT <<PK>> #PK_COLOR
    --
    Store_Name : VARCHAR(100)
    Store_City_Category : VARCHAR(1)
    Store_Region : VARCHAR(50)
}

entity "DimSupplier" as DimSupplier {
    * **Supplier_ID** : INT <<PK>> #PK_COLOR
    --
    Supplier_Name : VARCHAR(100)
}

' Fact Table
entity "FactSales" as FactSales #FACT_COLOR {
    * **Sale_ID** : INT <<PK, AUTO_INCREMENT>> #PK_COLOR
    --
    Order_ID : INT
    * Customer_ID : INT <<FK>> #FK_COLOR
    * Product_ID : VARCHAR(20) <<FK>> #FK_COLOR
    * Date_ID : INT <<FK>> #FK_COLOR
    * Store_ID : INT <<FK>> #FK_COLOR
    Purchase_Amount : DECIMAL(10,2)
    Quantity : INT
}

' Relationships
FactSales }o--|| DimCustomer : "Customer_ID"
FactSales }o--|| DimProduct : "Product_ID"
FactSales }o--|| DimDate : "Date_ID"
FactSales }o--|| DimStore : "Store_ID"
DimProduct }o--|| DimSupplier : "Supplier_ID"

note right of FactSales
  **Fact Table**
  Contains sales transaction metrics
  Foreign keys reference all dimensions
end note

note right of DimCustomer
  **Customer Dimension**
  Demographics and customer attributes
end note

note right of DimProduct
  **Product Dimension**
  Product details and supplier info
end note

note right of DimDate
  **Time Dimension**
  Supports time hierarchies
  (Day, Month, Quarter, Year, Season)
end note

note right of DimStore
  **Store Dimension**
  Store location information
end note

note right of DimSupplier
  **Supplier Dimension**
  Supplier information
end note

@enduml

